--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,71 @@
+body {
+  font-family: arial, sans-serif;
+  font-size: 14px;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
 li {
-  display: inline;
+  display: inline-flex;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  height: auto;
+}
+
+.item {
+  margin: auto;
+  padding: 6px;
+}
+
+.header {
+  margin: auto;
+  padding: 6px;
+}
+
+.search-box {
+  background: #fff;
+  display: flex;
+  border: 1px solid #dfe1e5;
+  border-radius: 24px;
+  z-index: 3;
+  height: 30px;
+  margin: 0 auto;
+  width: auto;
+}
+
+.search-input {
+  background-color: transparent;
+  border: none;
+  margin: 0 15px;
+  padding: 0;
+  color: rgba(0, 0, 0, 0.87);
+  word-wrap: break-word;
+  outline: none;
+  display: flex;
+  flex: 100%;
+  margin-top: 0;
+  font-size: 16px;
+}
+
+.btn {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 4px;
+  color: #3c4043;
+  margin: 11px 4px;
+  padding: 0 16px;
+  line-height: 27px;
+  height: 36px;
+  min-width: 54px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
 }
