Add Google Sign In section details including profile picture, add inline styling and javascript on the clear button (TEMPORARY)

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,12 @@ a {
 
 .google-sign-in {
   flex-grow: 1;
-  padding-left: 70vw;
+  padding-left: 60vw;
+}
+
+.logo-circle {
+  border-radius: 50%;
+  height: 30px;
 }
 
 .google-logo {
