--- a/css/main.css
+++ b/css/main.css
@@ -14,12 +14,12 @@ footer {
 }
 
 main {
-  margin: auto;
+  margin: 20vh auto;
   flex-grow: 1;
 }
 
 footer {
-  padding-bottom: 35px;
+  padding: 10px 0 10px 0px;
   background: #f2f2f2;
 }
 
@@ -34,6 +34,7 @@ a {
   padding: 5px;
   margin: 0 5px;
   color: #222;
+  text-decoration: none;
 }
 
 .container {
@@ -57,6 +58,10 @@ a {
   padding-left: 60vw;
 }
 
+.sign-in-link {
+  font-size: 13px;
+}
+
 .logo-circle {
   border-radius: 50%;
   height: 30px;
@@ -74,7 +79,7 @@ a {
   display: flex;
   border: 1px solid #dfe1e5;
   border-radius: 25px;
-  width: 50vw;
+  min-width: 600px;
   height: 35px;
   margin: 0 auto;
 }
@@ -126,4 +131,8 @@ a {
 
 .footer {
   display: flex;
+}
+
+.footer-link {
+  color: #70757a;
 }
